# DerivaSharp

./: .editorconfig  AGENTS.md  CLAUDE.md  DerivaSharp.slnx  Directory.Build.props  LICENSE.txt  README.md  README.zh-CN.md  StyleCopAnalyzers.ruleset  skills-lock.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benchmarks/: .editorconfig  AmericanEngineBenchmarks.cs  AutocallableEngineBenchmarks.cs  DerivaSharp.Benchmarks.csproj  EuropeanEngineBenchmarks.cs
notebooks/: accumulator.ipynb  common_imports.py  european.ipynb  european_vanilla.ipynb  pyproject.toml  snowball.ipynb  vanilla_european.ipynb
src/: DerivaSharp.csproj  DerivaSharp.csproj.DotSettings  Directory.Build.props  ExceptionMessages.cs
src/DerivaSharp/: DerivaSharp.csproj  (+2 more)
src/DerivaSharp.Benchmarks/: AutocallableBenchmarks.cs  BarrierBenchmarks.cs  DerivaSharp.Benchmarks.csproj  Program.cs  VanillaBenchmarks.cs
src/DerivaSharp.Tests/: AnalyticBarrierEngineTest.cs  AnalyticBinaryBarrierEngineTest.cs  AnalyticDigitalEngineTest.cs  AnalyticEuropeanEngineTest.cs  BinomialTreeVanillaEngineTest.cs  BjerksundStenslandAmericanEngineTest.cs  DerivaSharp.Tests.csproj  DerivaSharp.Tests.csproj.DotSettings  FdAccumulatorEngineTest.cs  FdAmericanEngineTest.cs  FdBarrierEngineTest.cs  FdEuropeanEngineTest.cs  FdPhoenixEngineTest.cs  FdSingleTouchEngineTest.cs  FdSnowballEngineTest.cs  IntegralEuropeanEngineTest.cs  McAmericanEngineTest.cs  McEuropeanEngineTest.cs  McPhoenixEngineTest.cs  McSnowballEngineTest.cs
tests/: DerivaSharp.Tests.csproj  DerivaSharp.Tests.csproj.DotSettings
(+211 files in other folders)
