[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "ipykernel",
    "matplotlib",
    "numpy",
    "pandas",
    "pythonnet",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
